--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lymph-node",
-  "version": "0.0.0-1",
+  "version": "0.0.1",
   "private": true,
   "main": "index.js",
   "dependencies": {
