--- a/package.json
+++ b/package.json
@@ -4,23 +4,10 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "heroku.js": "git+https://github.com/dncrews/heroku.js.git",
-    "startup": "~0.1.12",
-    "express": "~3.3.5"
-  },
-  "devDependencies": {
-    "mocha": "~1.12.0",
-    "expect.js": "~0.2.0",
-    "blanket": "~1.1.5"
-  },
-  "engines": {
-    "node": "0.8.x",
-    "npm": "1.2.x"
+    "express": "^4.17.1",
+    "heroku-client": "^3.1.0"
   },
   "scripts": {
-    "blanket": {
-      "pattern": "lymph-node/lib"
-    },
-    "test": "foreman run sh ./bin/tests"
+    "start": "node index.js"
   }
 }
